# cars

./: .env_example  .gitignore  pyproject.toml
cars/: admin.py  forms.py  models.py  urls.py  views.py
cars/migrations/: 0001_initial.py
core/: settings.py  urls.py
static/css/: base.css
templates/: base.html  base_without_sidebar.html  sidebar.html
templates/auth/: login.html  register.html
templates/vehicles/: list_of_vehicles.html
