[tool.poetry]
name = "cars"
version = "0.1.0"
description = "An application to manage a list of cars"
authors = ["Joao Victor <jvpr.tech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2"
pillow = "^10.3.0"
psycopg = "^3.1.19"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
